# netzanmeldung-excel-sync

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: datenschema.md
src/netzanmeldung_excel_sync/: __init__.py  cli.py  config.py  demo.py  sync.py
src/netzanmeldung_excel_sync/sample_data/: __init__.py  kontakte.csv  projekte.csv  termine.csv
tests/: test_sync.py
